Stop pieces from adding scrollbar when off screen

--- a/frontend/src/styles/LiveGame.scss
+++ b/frontend/src/styles/LiveGame.scss
@@ -19,6 +19,7 @@
       grid-template-columns: 1fr min(100%, 30rem, 75vh) 1fr;
       grid-auto-rows: min-content min-content min-content 1fr;
       column-gap: 1rem;
+      overflow-y: hidden;
     }
   }
 }
